--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+# Virtual environment
+attension_env/
+env/
+venv/
+
+# Python cache
+__pycache__/
+*.pyc
+
+# Build / executable files
+build/
+dist/
+*.spec
+
+# OS files
+.DS_Store
+Thumbs.db
 attension_env/
